<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_classroom">

    <fragment
        android:id="@+id/navigation_classroom"
        android:name="com.rahmania.sip_bdr.fragment.ClassroomFragment"
        android:label="@string/menu_1"
        tools:layout="@layout/fragment_classroom" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.rahmania.sip_bdr.fragment.LocationSubmissionFragment"
        android:label="@string/menu_2"
        tools:layout="@layout/fragment_location_submission" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.rahmania.sip_bdr.fragment.AccountFragment"
        android:label="@string/menu_3"
        tools:layout="@layout/fragment_account" />
</navigation>