<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.AddMeetingActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="-50dp"
        app:cardBackgroundColor="@color/colorCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:padding="5dp">

<!--            <TextView-->
<!--                android:id="@+id/tv_classroomName"-->
<!--                style="@style/TextAbout.Black"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:textSize="20sp"-->
<!--                tools:text="Nama Kelas" />-->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                tools:ignore="UselessParent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:textStyle="bold"
                        android:text="@string/classroom" />

                    <TextView
                        android:id="@+id/tv_classroomName"
                        style="@style/TextSpec.Value"
                        tools:text="Struktur Data dan Algoritma B" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:textStyle="bold"
                        android:text="@string/sks" />

                    <TextView
                        android:id="@+id/tv_sks"
                        style="@style/TextSpec.Value"
                        tools:text="3 SKS" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:textStyle="bold"
                        android:text="@string/schedule" />

                    <TextView
                        android:id="@+id/tv_schedule"
                        style="@style/TextSpec.Value"
                        tools:text="Hari | Jam" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Spinner
        android:id="@+id/meeting_number_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/TextList"/>

<!--    android:entries="@array/meeting_number"-->

    <EditText
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="18dp"
        android:clickable="true"
        android:inputType="date"
        android:focusable="false"
        android:hint="@string/date"
        style="@style/TextList"
        tools:ignore="KeyboardInaccessibleWidget"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_clock"
        android:drawablePadding="18dp"
        android:clickable="true"
        android:inputType="time"
        android:focusable="false"
        android:hint="@string/start_time"
        style="@style/TextList"
        tools:ignore="KeyboardInaccessibleWidget"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/et_finish_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_clock"
        android:drawablePadding="18dp"
        android:clickable="true"
        android:inputType="time"
        android:focusable="false"
        android:hint="@string/finish_time"
        style="@style/TextList"
        tools:ignore="KeyboardInaccessibleWidget"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/et_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_book"
        android:drawablePadding="18dp"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:hint="@string/topic"
        android:selectAllOnFocus="true"
        style="@style/TextList"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_create_meeting"
        android:layout_margin="22dp"
        android:layout_marginTop="16dp"
        android:enabled="true"
        android:text="@string/action_create_meeting"
        style="@style/Button"
        app:layout_constraintTop_toBottomOf="@+id/et_topic"
        app:layout_constraintVertical_bias="0.2" />

</LinearLayout>