<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.AddMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/meeting_number_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:entries="@array/meeting_number"
            style="@style/TextList"/>

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="18dp"
            android:clickable="true"
            android:inputType="date"
            android:focusable="false"
            android:hint="@string/date"
            style="@style/TextList"
            tools:ignore="KeyboardInaccessibleWidget"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_clock"
            android:drawablePadding="18dp"
            android:clickable="true"
            android:inputType="time"
            android:focusable="false"
            android:hint="@string/start_time"
            style="@style/TextList"
            tools:ignore="KeyboardInaccessibleWidget"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/et_finish_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_clock"
            android:drawablePadding="18dp"
            android:clickable="true"
            android:inputType="time"
            android:focusable="false"
            android:hint="@string/finish_time"
            style="@style/TextList"
            android:imeOptions="actionDone"
            tools:ignore="KeyboardInaccessibleWidget"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/btn_edit_meeting"
            android:layout_margin="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/action_save_changes"
            style="@style/Button"
            app:layout_constraintTop_toBottomOf="@+id/et_finish_time"
            app:layout_constraintVertical_bias="0.2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>