<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.MeetingDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_meetingNumber"
            style="@style/TextAbout.Black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="26sp"
            tools:text="Pertemuan ke-1" />

        <TextView
            style="@style/TextAbout.Subtitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/meeting_description" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tv_date"
                    style="@style/TextSpec.Value"
                    tools:text="Date" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/tv_time"
                    style="@style/TextSpec.Value"
                    tools:text="08:00 - 10:00" />
            </TableRow>

        </TableLayout>

        <TextView
            style="@style/TextAbout.Subtitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/presence_description" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_students"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/students_list"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="176dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_edit"
            android:visibility="invisible"
            android:clickable="true"
            app:borderWidth="0dp"
            app:elevation="16dp"
            android:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:id="@+id/fab_editMeeting"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="106dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_trash"
            android:visibility="invisible"
            android:clickable="true"
            app:borderWidth="0dp"
            app:elevation="16dp"
            android:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:id="@+id/fab_deleteMeeting"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_menu"
            android:visibility="visible"
            android:clickable="true"
            app:borderWidth="0dp"
            app:elevation="16dp"
            android:backgroundTint="@color/colorAccent"
            app:pressedTranslationZ="12dp"
            android:id="@+id/fab"
            android:focusable="true"/>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>