<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="?attr/actionBarSize"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context=".fragment.LocationSubmissionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:cardCornerRadius="45dp"
            android:layout_marginStart="-50dp"
            app:cardBackgroundColor="@color/colorCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="50dp"
                android:padding="5dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    tools:ignore="UselessParent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp">

                        <TextView
                            style="@style/TextSpec.Field"
                            android:textStyle="bold"
                            android:text="@string/name" />

                        <TextView
                            android:id="@+id/tv_name"
                            style="@style/TextSpec.Value"
                            tools:text="Husnil Kamil" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp">

                        <TextView
                            style="@style/TextSpec.Field"
                            android:textStyle="bold"
                            android:text="@string/nip2" />

                        <TextView
                            android:id="@+id/tv_nip"
                            style="@style/TextSpec.Value"
                            tools:text="NIP" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_locations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/locations_list" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_locationSubmission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_location_submission"
        style="@style/TextAbout.Subtitle"
        android:visibility="gone"
        android:gravity="center_horizontal|center_vertical"/>

</LinearLayout>